@@ -1,3 +1,7 @@
+2023-07-04  Matteo Corti  <matteo@corti.li>
+
+        * undock.sh: Better output
+
 2023-06-01  Matteo Corti  <matteo@corti.li>
 
         * undock.sh: First release
